// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test SyncTaskList should be called request to get data for the render table 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 8px;"
            >
              syncDataSource.syncTaskList.title
            </div>
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn"
                data-testid="refreshTable"
                type="button"
              >
                <span
                  aria-label="sync"
                  class="anticon anticon-sync"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="sync"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M168 504.2c1-43.7 10-86.1 26.9-126 17.3-41 42.1-77.7 73.7-109.4S337 212.3 378 195c42.4-17.9 87.4-27 133.9-27s91.5 9.1 133.8 27A341.5 341.5 0 01755 268.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.7 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c0-6.7-7.7-10.5-12.9-6.3l-56.4 44.1C765.8 155.1 646.2 92 511.8 92 282.7 92 96.3 275.6 92 503.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8zm756 7.8h-60c-4.4 0-7.9 3.5-8 7.8-1 43.7-10 86.1-26.9 126-17.3 41-42.1 77.8-73.7 109.4A342.45 342.45 0 01512.1 856a342.24 342.24 0 01-243.2-100.8c-9.9-9.9-19.2-20.4-27.8-31.4l60.2-47a8 8 0 00-3-14.1l-175.7-43c-5-1.2-9.9 2.6-9.9 7.7l-.7 181c0 6.7 7.7 10.5 12.9 6.3l56.4-44.1C258.2 868.9 377.8 932 512.2 932c229.2 0 415.5-183.7 419.8-411.8a8 8 0 00-8-8.2z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="ant-card-extra"
        >
          <button
            class="ant-btn ant-btn-primary"
            type="button"
          >
            <a
              href="/syncDataSource/create"
            >
              syncDataSource.syncTaskList.addSyncTask
            </a>
          </button>
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <div
        class="ant-table-wrapper"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-table"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                >
                  <table
                    style="table-layout: auto;"
                  >
                    <colgroup>
                      <col />
                      <col />
                      <col />
                      <col />
                      <col />
                      <col />
                      <col
                        style="width: 160px;"
                      />
                    </colgroup>
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell"
                        >
                          syncDataSource.syncTaskList.columns.source
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          syncDataSource.syncTaskList.columns.version
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          syncDataSource.syncTaskList.columns.url
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          syncDataSource.syncTaskList.columns.instanceType
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          syncDataSource.syncTaskList.columns.lastSyncResult
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          syncDataSource.syncTaskList.columns.lastSyncSuccessTime
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          common.operate
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="0"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          source1
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          4.2.2.0
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          http://192.168.1.1:3000
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          mysql
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-tag ant-tag-green"
                          >
                            common.success
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          2023-01-10 00:00:00
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-space ant-space-horizontal ant-space-align-center user-cell flex-end-horizontal"
                          >
                            <div
                              class="ant-space-item"
                              style="margin-right: 8px;"
                            >
                              <a
                                href="/syncDataSource/update/0"
                              >
                                common.edit
                              </a>
                            </div>
                            <div
                              class="ant-space-item"
                              style="margin-right: 8px;"
                            >
                              <a
                                class="ant-typography pointer"
                              >
                                syncDataSource.syncTaskList.columns.sync
                              </a>
                            </div>
                            <div
                              class="ant-space-item"
                              style="margin-right: 8px;"
                            >
                              <div
                                class="ant-divider ant-divider-vertical"
                                role="separator"
                              />
                            </div>
                            <div
                              class="ant-space-item"
                            >
                              <span
                                class="ant-typography ant-typography-danger pointer"
                              >
                                common.delete
                              </span>
                            </div>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="1"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          source1
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          4.2.2.0
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          http://192.168.1.1:3000
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          oracle
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-tag ant-tag-red"
                          >
                            common.fail
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          2023-01-10 00:00:00
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-space ant-space-horizontal ant-space-align-center user-cell flex-end-horizontal"
                          >
                            <div
                              class="ant-space-item"
                              style="margin-right: 8px;"
                            >
                              <a
                                href="/syncDataSource/update/1"
                              >
                                common.edit
                              </a>
                            </div>
                            <div
                              class="ant-space-item"
                              style="margin-right: 8px;"
                            >
                              <a
                                class="ant-typography pointer"
                              >
                                syncDataSource.syncTaskList.columns.sync
                              </a>
                            </div>
                            <div
                              class="ant-space-item"
                              style="margin-right: 8px;"
                            >
                              <div
                                class="ant-divider ant-divider-vertical"
                                role="separator"
                              />
                            </div>
                            <div
                              class="ant-space-item"
                            >
                              <span
                                class="ant-typography ant-typography-danger pointer"
                              >
                                common.delete
                              </span>
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test SyncTaskList should match snapshot 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 8px;"
            >
              syncDataSource.syncTaskList.title
            </div>
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn"
                data-testid="refreshTable"
                type="button"
              >
                <span
                  aria-label="sync"
                  class="anticon anticon-sync anticon-spin"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="sync"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M168 504.2c1-43.7 10-86.1 26.9-126 17.3-41 42.1-77.7 73.7-109.4S337 212.3 378 195c42.4-17.9 87.4-27 133.9-27s91.5 9.1 133.8 27A341.5 341.5 0 01755 268.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.7 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c0-6.7-7.7-10.5-12.9-6.3l-56.4 44.1C765.8 155.1 646.2 92 511.8 92 282.7 92 96.3 275.6 92 503.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8zm756 7.8h-60c-4.4 0-7.9 3.5-8 7.8-1 43.7-10 86.1-26.9 126-17.3 41-42.1 77.8-73.7 109.4A342.45 342.45 0 01512.1 856a342.24 342.24 0 01-243.2-100.8c-9.9-9.9-19.2-20.4-27.8-31.4l60.2-47a8 8 0 00-3-14.1l-175.7-43c-5-1.2-9.9 2.6-9.9 7.7l-.7 181c0 6.7 7.7 10.5 12.9 6.3l56.4-44.1C258.2 868.9 377.8 932 512.2 932c229.2 0 415.5-183.7 419.8-411.8a8 8 0 00-8-8.2z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="ant-card-extra"
        >
          <button
            class="ant-btn ant-btn-primary"
            type="button"
          >
            <a
              href="/syncDataSource/create"
            >
              syncDataSource.syncTaskList.addSyncTask
            </a>
          </button>
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <div
        class="ant-table-wrapper"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div>
            <div
              class="ant-spin ant-spin-spinning"
            >
              <span
                class="ant-spin-dot ant-spin-dot-spin"
              >
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
              </span>
            </div>
          </div>
          <div
            class="ant-spin-container ant-spin-blur"
          >
            <div
              class="ant-table ant-table-empty"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                >
                  <table
                    style="table-layout: auto;"
                  >
                    <colgroup>
                      <col />
                      <col />
                      <col />
                      <col />
                      <col />
                      <col />
                      <col
                        style="width: 160px;"
                      />
                    </colgroup>
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell"
                        >
                          syncDataSource.syncTaskList.columns.source
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          syncDataSource.syncTaskList.columns.version
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          syncDataSource.syncTaskList.columns.url
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          syncDataSource.syncTaskList.columns.instanceType
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          syncDataSource.syncTaskList.columns.lastSyncResult
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          syncDataSource.syncTaskList.columns.lastSyncSuccessTime
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          common.operate
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        class="ant-table-placeholder"
                      >
                        <td
                          class="ant-table-cell"
                          colspan="7"
                        >
                          <div
                            class="ant-empty ant-empty-normal"
                          >
                            <div
                              class="ant-empty-image"
                            >
                              <svg
                                class="ant-empty-img-simple"
                                height="41"
                                viewBox="0 0 64 41"
                                width="64"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <g
                                  fill="none"
                                  fill-rule="evenodd"
                                  transform="translate(0 1)"
                                >
                                  <ellipse
                                    class="ant-empty-img-simple-ellipse"
                                    cx="32"
                                    cy="33"
                                    rx="32"
                                    ry="7"
                                  />
                                  <g
                                    class="ant-empty-img-simple-g"
                                    fill-rule="nonzero"
                                  >
                                    <path
                                      d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                                    />
                                    <path
                                      class="ant-empty-img-simple-path"
                                      d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                                    />
                                  </g>
                                </g>
                              </svg>
                            </div>
                            <div
                              class="ant-empty-description"
                            >
                              No Data
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
